# urColo

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  build.ps1  build.sh  palettes.json  run.ps1  run.sh
tests/: CMakeLists.txt  test_colour.cpp  test_contrast.cpp  test_generator.cpp  test_highlights.cpp  test_imageutils.cpp  test_logger.cpp  test_model.cpp  test_serialization.cpp  test_window.cpp
urColo/: Colour.cpp  Colour.h  Contrast.h  Gui.cpp  Gui.h  ImageUtils.cpp  ImageUtils.h  Logger.h  Model.cpp  Model.h  PaletteGen.h  PaletteGenerator.cpp  PaletteGenerator.h  Profiling.h  compiler_warnings.h  main.cpp
urColo/Gui/: ContrastTestTab.cpp  ContrastTestTab.h  GenSettingsTab.cpp  GenSettingsTab.h  HighlightsTab.cpp  HighlightsTab.h  PaletteGenTab.cpp  PaletteGenTab.h  Tab.cpp  Tab.h  WindowManager.cpp  WindowManager.h
